2009-11-15  Chong Yidong  <cyd@stupidchicken.com>

	* strokes.el (strokes-update-window-configuration): Make strokes
	buffer current before erasing (Bug#4906).

	* cedet/semantic/idle.el (semantic-idle-summary-mode)
	(semantic-idle-summary-mode): Define using define-minor-mode
	instead of define-semantic-idle-service.
	(semantic-idle-summary-mode): New function.
	(semantic-idle-summary-mode-setup): Use pre-command-hook to ensure
	that mouse motion does not reset the echo area.

2009-11-15  Juri Linkov  <juri@jurta.org>

	* simple.el (set-mark-default-inactive): Add :type, :group
	and :version.  (Bug#4876)

2009-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* arc-mode.el (archive-maybe-copy): Move creation of directory ...
	(archive-unique-fname): ... here.  (Bug#4929)

2009-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-mode.el (help-make-xrefs): Undo the last revert, and replace it
	with a real fix.

	* novice.el (disabled-command-function): Add useful args.
	Setup the help buffer so that [back] works.
	Remove redundant call to help-mode.
	(disabled-command-function): Use `case'.
	(en/disable-command): New function extracted from enable-command.
	(enable-command, disable-command): Use it.

2009-11-14  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-tools-menu): Read and send mail entries are not
	constants.  (Bug#4913)

	* emacs-lisp/elint.el (elint-standard-variables): Doc fix.

2009-11-14  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* emacs-lisp/elint.el (elint-standard-variables): Add some variables
	defined in C that have no doc-strings.  (Bug#1063)

2009-11-14  Francis Wright  <F.J.Wright@qmul.ac.uk>

	* cus-edit.el (data, files):
	* ps-print.el (postscript): Doc fixes for custom groups.  (Bug#3327)

2009-11-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (shell-command): Doc fix (Bug#4891).

	* help-mode.el (help-make-xrefs): Revert 2009-11-13 change.

2009-11-14  Glenn Morris  <rgm@gnu.org>
